--- a/front-end/index.html
+++ b/front-end/index.html
@@ -85,10 +85,10 @@
 				</div>
 				<div class="input-area">
 					<div class="input-wrapper">
-						<input type="text" value="" placeholder="Message here">
+						<input id="text-area" type="text" value="" placeholder="Message here">
 						<i class="fa fa-smile-o"></i>
 					</div>
-					<input type="button" value="Submit" class="send-btn">
+					<input id="btn-submit-chat" type="submit" value="Submit" class="send-btn" onclick="">
 				</div>
 			</div>
 			<div class="right-tabs">
